--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -165,7 +165,7 @@
         <form action="/boards" method="POST">
           <input type="hidden" name="player_id" value="{{ player.player_id }}">
           <input type="hidden" name="opponent_id" value="{{ opponent.player_id }}">
-          <input type="submit" value="Play Computer">
+          <input id="newGameBack" type="submit" value="Play Computer">
         </form>
       </div>
 
