--- a/views/board/board.html
+++ b/views/board/board.html
@@ -129,7 +129,7 @@
   	</div>
 
 	<div>
-        <img id="logoIcon" src="/views/images/chess.png" alt="LogoImage">
+        <img id="logoIcon" src="/views/images/remove.png" alt="LogoImage">
     </div>
 
     <div>
@@ -537,6 +537,11 @@
     <!--  Currently dont see the need for this at the moment.
 		<center><button id="submit">Lock in Move</button></center>
 	-->
+	<div>
+        <form action="/" method="GET">
+          <input id="exit" type="submit" value="Logout">
+        </form>
+      </div>
 </section>
 	{% endblock %}
 
