--- a/views/dashboard/dashboard.html
+++ b/views/dashboard/dashboard.html
@@ -120,7 +120,7 @@
       </div>
 
       <div>
-        <img id="logoIcon" src="/views/images/chess.png" alt="LogoImage">
+        <img id="logoIcon" src="/views/images/remove.png" alt="exitImage">
       </div>
 
       <div>
@@ -169,6 +169,11 @@
         </form>
       </div>
 
+      <div>
+        <form action="/" method="GET">
+          <input id="exit" type="submit" value="Logout">
+        </form>
+      </div>
 
     </section>
     <script nonce="b64value" src="/views/dashboard/dashboard.js"></script>
