--- a/views/dashboard/dashboard.css
+++ b/views/dashboard/dashboard.css
@@ -256,3 +256,18 @@ section .row div
     text-align: center;
     z-index: 1005;
 }
+
+#exit
+{
+    position: absolute;
+    opacity: 0;
+    top: 2%;
+    right: 2%;
+    height: 44px;
+    width: 44px;
+    border-radius: 0px;
+    background-color: whitesmoke;
+    text-align: center;
+    z-index: 1005;
+    
+}
