Winning Screen Started
Got a working copy of a when you win screen, not 100% best quality yet but doable. Going to add some CSS to it.

--- a/views/board/board.html
+++ b/views/board/board.html
@@ -544,6 +544,9 @@
       </div>
 </section>
 	{% endblock %}
+	<div>
+		<h id="playerName">{{ player.player_name }}</h>
+	</div>
 
 	<!-- You can also require other files to run in this process -->
 	<script nonce="b64value" src="/views/board/board.js" defer></script>
