--- a/views/board/board.html
+++ b/views/board/board.html
@@ -541,7 +541,13 @@
         <form action="/" method="GET">
           <input id="exit" type="submit" value="Logout">
         </form>
-      </div>
+    </div>
+	<div id="resultScreen">
+		<div>
+			<br><br><br>
+			<h id="resultText"> You Win!</h>
+		</div>
+	</div>
 </section>
 	{% endblock %}
 	<div>
