ResultScreen Finished Final
added winning and losing screen, cant keep clicking

--- a/views/board/board.html
+++ b/views/board/board.html
@@ -544,8 +544,7 @@
     </div>
 	<div id="resultScreen">
 		<div>
-			<br><br><br>
-			<h id="resultText"> You Win!</h>
+			<h id="resultText"></h>
 		</div>
 	</div>
 </section>
